cmake_minimum_required(VERSION 3.10)
project(advent_of_code_2018)

set(CMAKE_CXX_STANDARD 17)

add_executable(advent_of_code_2018
    src/micropather_1_2_0/micropather.cpp
    src/day1.cpp
    src/day2.cpp
    src/day3.cpp
    src/day4.cpp
    src/day5.cpp
    src/day6.cpp
    src/day7.cpp
    src/day8.cpp
    src/day9.cpp
    src/day10.cpp
    src/day11.cpp
    src/day12.cpp
    src/day13.cpp
    src/day14.cpp
    src/day15.cpp
    src/day16.cpp
    src/day17.cpp
    src/day18.cpp
    src/day19.cpp
    src/main.cpp)
